// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute returns closed if tradinghours is closed 1`] = `
{
  "data": {
    "result": 1,
    "statusCode": 200,
  },
  "jobRunID": "1",
  "result": 1,
  "statusCode": 200,
}
`;

exports[`execute returns closed if tradinghours is failing and ncfx is failing 1`] = `
{
  "data": {
    "result": 1,
    "statusCode": 200,
  },
  "jobRunID": "1",
  "result": 1,
  "statusCode": 200,
}
`;

exports[`execute returns closed if tradinghours is failing and ncfx is unknown 1`] = `
{
  "data": {
    "result": 1,
    "statusCode": 200,
  },
  "jobRunID": "1",
  "result": 1,
  "statusCode": 200,
}
`;

exports[`execute returns ncfx if tradinghours is failing 1`] = `
{
  "data": {
    "result": 2,
    "statusCode": 200,
  },
  "jobRunID": "1",
  "result": 2,
  "statusCode": 200,
}
`;

exports[`execute returns ncfx if tradinghours is unknown 1`] = `
{
  "data": {
    "result": 2,
    "statusCode": 200,
  },
  "jobRunID": "1",
  "result": 2,
  "statusCode": 200,
}
`;

exports[`execute returns open if tradinghours is open 1`] = `
{
  "data": {
    "result": 2,
    "statusCode": 200,
  },
  "jobRunID": "1",
  "result": 2,
  "statusCode": 200,
}
`;

exports[`execute returns tradinghours if tradinghours is open 1`] = `
{
  "data": {
    "result": 2,
    "statusCode": 200,
  },
  "jobRunID": "1",
  "result": 2,
  "statusCode": 200,
}
`;
